check lenght and matching

--- a/form-validator/index.html
+++ b/form-validator/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="form-control">
                 <label for="password2">Confirm password</label>      
-                <input type="password2" id="password2" placeholder="Repeat password"></input>
+                <input type="password" id="password2" placeholder="Repeat password"></input>
                 <small>Something went wrong</small>
             </div>
             <button type="submit">Submit</button>
