--- a/movie-seat/index.html
+++ b/movie-seat/index.html
@@ -8,6 +8,111 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="movie-container">
+        <label>Pick a movie</label>
+        <select id="movie">
+            <option value="10">Avengers($40)</option>
+            <option value="12">Joker (12$)</option>
+            <option value="8">Toy Story(20$)</option>
+            <option value="9">The Lion King(15$)</option>
+        </select>
+    </div>
+    <ul class="show-case">
+        <li>
+            <div class="seat">
+            </div>
+                <small>N/A</small>
+        </li>
+        <li>
+            <div class="seat selected">
+            </div>
+                <small>Selected</small>
+        </li>
+        <li>
+            <div class="seat occupied">
+            </div>
+                <small>Occupied</small>
+        </li>
+    </ul>
+
+    <div class="container">
+        <div class="screen"> </div>
+            <div class="row">
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+            </div>
+            <div class="row">
+                <div class="seat occupied"></div>
+                <div class="seat occupied"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat occupied"></div>
+                <div class="seat"></div>
+            </div>
+            <div class="row">
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="occupied seat"></div>
+                <div class="seat"></div>
+            </div>
+            <div class="row">
+                <div class="seat"></div>
+                <div class="occupied seat"></div>
+                <div class="occupied seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+            </div>
+            <div class="row">
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+            </div>
+            <div class="row">
+                <div class="occupied seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+            </div>
+            <div class="row">
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="occupied seat"></div>
+                <div class="occupied seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+                <div class="seat"></div>
+            </div>
+        </div>
+        <p class="text">You have selected <span id="count">0</span>
+        seats for the price of $ <span id="total">0</span>
+        </p>
+    </div>
+
+ <script src="script.js"></script>   
 </body>
 </html>
