--- a/array-methods/index.html
+++ b/array-methods/index.html
@@ -11,9 +11,9 @@
 
     <div class="container">
         <aside>
-            <button id="add_user">Add User 😻</button>
+            <button id="add-user">Add User 😻</button>
             <button id="sort">Sort by riches 💍</button>
-            <button id="substract"> Take half of the money off 💰</button>
+            <button id="substract-half"> Take half of the money off 💰</button>
             <button id="double">Double Money 🏦</button>
             <button id="show-millionaire">Show Only Millionaires 💶</button>
             <button id="calculate-wealth">Calculate Entire Wealth 💸</button>
